mailbox and send part
