# mib/Specification/swagger.yml
@@ -33,3 +33,75 @@ paths:
           description: you can't see this information
         202:
           description: messages retrived correctly
+  /delete_draft_message/{draft_id}:
+    get:
+      tags: [ Message ]
+      description: delete drfat message by its id
+      operationId: mib.resource.message.delete_draft_message
+      parameters:
+        - name: draft_id
+          description: Draft message Unique id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Delete done
+  /draft_message_info/{draft_id}:
+    get:
+      tags: [ Message ]
+      description: give drfat message info by its id
+      operationId: mib.resource.message.draft_message_info
+      parameters:
+        - name: draft_id
+          description: Draft message Unique id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: draft message info
+  /send_message:
+    post:
+      tags: [ Message ]
+      summary: add message
+      operationId: mib.resource.message.send_message
+      requestBody:
+        description: message sent
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - sender_id
+                - sender_nickname
+                - receiver_id
+                - receiver_nickname
+                - body
+                - delivery_date
+                - image
+              properties:
+                sender_id:
+                  type: string
+                sender_nickname:
+                  type: string
+                receiver_id:
+                  type: string
+                receiver_nickname:
+                  type: string
+                body:
+                  type: string
+                delivery_date:
+                  type: string
+                image:
+                  type: string
+      description: |
+        add user to blacklist
+      responses:
+        202:
+          description: message sent
+        303:
+          description: message not sent
